--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
 }
 
 .wrap {
-  background: url(back4.jpg) no-repeat right center fixed;
+  background: url(back.jpg) no-repeat right center fixed;
   background-size: cover;
   position: absolute;
   width: 100%;
